Add split type
